# avbd-demo3d

./: .gitignore  .gitmodules  CMakeLists.txt  PHYSICS_TEST_README.md  README.md  build-linux.sh  build-macos.sh  build-web.sh  build-windows.bat  imgui.ini  physics_demo.sh  test_CMakeLists.txt  test_physics.cpp  validate_physics.sh
.github/workflows/: Build All.yml  Build Windows.yml
source/: collision.cpp  force.cpp  ignorecollision.h  joint.cpp  joint.h  main.cpp  manifold.cpp  maths.h  physics_test.cpp  rigid.cpp  scenes.h  shell.html  solver.cpp  solver.h  spring.cpp  spring.h
test_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
